test/Fail/Issue1702.err
Issue1702.agda:17.10-16: error: [NotInScope]
Not in scope:
  M.Priv
  at Issue1702.agda:17.10-16
when scope checking M.Priv
